# chat

./: Cargo.toml  docker-compose.yml
.github/workflows/: rust.yml
.sqlx/: query-ac9c1f2ccceeb5f3f8fee5145dff165015ba1ef1e635b60bcbdfa09ef6b04418.json  query-de27f2a29af8d009a4ec396c117d40622d1b2de9b4903ea072622e86eb2c96ac.json
chat_server/: Cargo.toml  app.yml  test.rest
chat_server/fixtures/: decoding.pem  encoding.pem
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs
chat_server/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20250305154406_init.sql  20250309063921_workspace.sql
