[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { workspace = true }
jwt-simple = { workspace = true }
redis = { version = "0.29.1", features = ["tokio-comp", "r2d2"] }
rustls = { version = "0.23", features = ["ring"] }
redis_rs = "0.9.0"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "compression-full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.15.1", features = ["v7", "serde"] }

[dev-dependencies]
sqlx-db-tester = "0.5.0"
